# modmul

./: .gitignore  LICENSE  PROJECT_STATE.md  README.md  RULES.md  pyproject.toml
docker/: Dockerfile  README.md  entrypoint.py
docs/: AGENT_CONTEXT.md
examples/: README.md  examples.json  tutorial.md
examples/always_zero/: README.md  manifest.json  model.py
examples/digit_transformer/: README.md  manifest.json  model.py  weights.pt
examples/dlp_grokking/: README.md  eval_tiers.py  manifest.json  model.py  train.py
public_benchmark/: tier_0.jsonl  tier_1.jsonl  tier_10.jsonl  tier_2.jsonl  tier_3.jsonl  tier_4.jsonl  tier_5.jsonl  tier_6.jsonl  tier_7.jsonl  tier_8.jsonl  tier_9.jsonl
rules/: evaluation.md  literature.md  overview.md
src/modchallenge/: __init__.py  cli.py  config.py
submission/: UPLOAD_TO_HUGGINGFACE.md
submission/ebm_modmul/: README.md  manifest.json  model.py
tests/: test_decoder.py  test_fixes.py  test_generator.py  test_leaderboard.py  test_pipeline_e2e.py  test_preprocess_isolation.py  test_sandbox.py  test_scorer.py  test_static_check.py
training/: COMPUTE_BACKUP_PLAN.md  RUNPOD_SETUP.md  TIER3_EXPERIMENTS.md  TIER3_STRATEGY.md  TIER6_NEXT.md  bundle_tier5.py  bundle_tier6.py  chain_eval.py  colab_run.ipynb  compose_probe.py  data.py  eval_t4.py  longdiv_probe.py  model.py  modmul_diag.py  modmul_probe.py  runpod_setup.sh  tier0_probe.py  tier3_probe.py  tier5_accuracy_probe.py  tier5_budget_probe.py  tier5_field_diag.py  tier5_modmul.py  tier5_pp_probe.py  tier6_kvcache_probe.py  tier6_recurrent.py  tier6_verify.py  train.py
(+14 files in other folders)
